# GNSS-PPP-ETL

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  INSTALL.md  README.md  found_products.json  found_products_igs.json  found_products_spec.json  pyproject.toml
gnss-ppp-products/: README.md  package-lock.json  pyproject.toml
gnss-ppp-products/.dg/: telemetry.yaml
gnss-ppp-products/config/: folder_structures.yml  sources.yml
gnss-ppp-products/dev/: dev_load_config.py  dev_pride_local.py  dev_product_query.py  test_atx.py  test_build_query.py  test_ion.py  test_orbit.py  test_rnx_nav.py  test_tropo.py
gnss-ppp-products/docs/notes/: ppp_products.md
gnss-ppp-products/src/defs/operations/: operations.py
gnss-ppp-products/src/gnss_ppp_products/: definitions.py  resources.py
gnss-ppp-products/src/gnss_ppp_products/assets/: __init__.py
gnss-ppp-products/src/gnss_ppp_products/assets/antennae/: __init__.py  config.py  query.py
gnss-ppp-products/src/gnss_ppp_products/assets/center/: __init__.py  config.py
gnss-ppp-products/src/gnss_ppp_products/assets/config_files/: _schema.yaml  cddis.yaml  code.yaml  esa.yaml  gfz.yaml  ngs.yaml  vmf.yaml
gnss-ppp-products/src/gnss_ppp_products/assets/leo/: config.py
gnss-ppp-products/src/gnss_ppp_products/assets/orography/: __init__.py
gnss-ppp-products/src/gnss_ppp_products/assets/products/: config.py  query.py
gnss-ppp-products/src/gnss_ppp_products/assets/reference_tables/: config.py  query.py
gnss-ppp-products/src/gnss_ppp_products/data_query/: __init__.py  remote.py
gnss-ppp-products/src/gnss_ppp_products/defs/: assets.py  operations.py
gnss-ppp-products/src/gnss_ppp_products/local/: README.md  base.py  local_storage.yaml
gnss-ppp-products/src/gnss_ppp_products/resources/: __init__.py  antennae_resources.py  atmospheric_products.py  base.py  ftp_servers.py  http_servers.py  igs_conventions.py  ionosphere_resources.py  leo_resources.py  local_resources.py  navigation_products.py  navigation_resources.py  orbit_clock_products.py  orbit_clock_resources.py  orography_resources.py  products.py  reference_tables.py  remote_resources.py  resource.py  troposphere_resources.py  utils.py
gnss-ppp-products/src/gnss_ppp_products/server/: __init__.py  ftp.py  http.py
gnss-ppp-products/src/gnss_ppp_products/utils/: __init__.py  ftp_download.py  product_sources.py  validation.py
gnss-ppp-products/test/: test_antex_resources.py  test_atmospheric_resources.py  test_ionosphere_resources.py  test_ionosphere_resources_NEW.py  test_leo_resources.py  test_leo_resources_NEW.py  test_navigation_resources.py  test_navigation_resources_NEW.py  test_orbit_resources.py  test_orbit_resources_NEW.py  test_orography_resources.py  test_orography_resources_NEW.py  test_reference_tables.py  test_reference_tables_NEW.py  test_remote_resources.py  test_troposphere_resources.py  test_troposphere_resources_NEW.py
gnss-ppp-products/tests/: test_assets.py  test_ftp_utils.py  test_pride_config.py  test_product_sources.py  test_resources.py  test_validation.py
(+190 files in other folders)
