[project]
name = "gnss_ppp_products"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -s"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)-8s %(name)s — %(message)s"
markers = [
    "integration: marks tests that require live FTP connections (skip with -m 'not integration')",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "gnss_ppp_products"
registry_modules = [
    "gnss_ppp_products.components.*",
]


